# wlogger

./: README.md  pyproject.toml
src/wlogger/: __init__.py  formatter.py  handler.py
