[project]
name = "wlogger"
version = "0.1.0"
description = "Lightweight Python logging library with color console and JSON file output"
readme = "README.md"
authors = [
    { name = "seoyc", email = "wkqco33@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["uv_build>=0.11.1,<0.12.0"]
build-backend = "uv_build"
